--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -65,7 +65,7 @@
 	<h2 style="color: white;">Order by:</h2>
 				 <select id="orderVideos"
 				name="order">
-				<option value="dislikeNumber">Views</option>
+				<option value="views">Views</option>
 				<option value="createdDate">Date</option>
 			</select>
 			
