--- a/ProjekatWeb/WebContent/Video.html
+++ b/ProjekatWeb/WebContent/Video.html
@@ -46,7 +46,7 @@
 				name="order">
 				<option value="likeNumber">Like</option>
 				<option value="dislikeNumber">Dislike</option>
-				<option value="createdDate">Date</option>
+				<option value="commentDate">Date</option>
 			</select>
 			
 				<label class="container-rb" style="color:white;">Ascending
