--- a/ProjekatWeb/WebContent/index.html
+++ b/ProjekatWeb/WebContent/index.html
@@ -12,8 +12,8 @@
 <body>
 <nav class="topnav">
   <a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
-  <a href="#signIn" onclick="openNav()">Sign in</a>
-  <a href="index.html">Home</a>
+  <a href="#signIn" id="signInLink" onclick="openNav()">Sign in</a>
+  <a href="index.html" id="home">Home</a>
   <div class="search-container">
     <form>
       <input type="text" placeholder="Search videos..."  id="search"  name="search">
@@ -35,6 +35,7 @@
 	<div class="row">
 	
 	</div>
+	
 	</section>
 	<footer class="footer-container">
 	<section class="notice">
