--- a/ProjekatWeb/WebContent/AddVideo.html
+++ b/ProjekatWeb/WebContent/AddVideo.html
@@ -13,7 +13,7 @@
 <body>
 	<nav class="topnav">
 		<a href="index.html" id="logo">Copyright <span
-			style="color: darkturquoise;">murder</span></a> <a href="index.html">Home</a>
+			style="color: darkturquoise;">murder</span></a>
 	</nav>
 	<div class="container">
 		<h1>Add video</h1>
@@ -22,7 +22,7 @@
 		<hr>
 		<form>
 			<label for="url">Video URL*</label> <input type="text" id="url"
-				name="url" placeholder="Video URL.." required="required"> <label
+				name="url" placeholder="Example:https://www.youtube.com/embed/Q0CbN8sfihY" required="required"> <label
 				for="name">Video name*</label> <input type="text" id="name"
 				name="name" placeholder="Video name name.." required="required">
 
