--- a/ProjekatWeb/WebContent/User.html
+++ b/ProjekatWeb/WebContent/User.html
@@ -80,6 +80,9 @@
 			</label>
 			<input type="submit" value="Order" id="orderSubmit">
 </div>
+<div class="overlay">
+<h1 style="margin-left:20%;margin-top:10%; color:white; font-size: 46px;">Sorry,this content  is blocked</h1>
+</div>
 </body>
 <script>
 function openVid(evt, option) {
