--- a/ProjekatWeb/WebContent/Video.html
+++ b/ProjekatWeb/WebContent/Video.html
@@ -84,6 +84,9 @@
 	<input type="button" value="Edit" id="editCommentSubmit">
 	</div>
 	</div>
+	<div class="overlay">
+<h1 style="margin-left:20%;margin-top:10%; color:white; font-size: 46px;">Sorry,this content or his owner is blocked</h1>
+</div>
 </body>
 <script type="text/javascript">
 	var coll = document.getElementsByClassName("collapsible");
