--- a/ProjekatWeb/WebContent/EditVideo.html
+++ b/ProjekatWeb/WebContent/EditVideo.html
@@ -12,8 +12,6 @@
 <body>
 <nav class="topnav">
   <a href="index.html" id="logo">Copyright <span style="color: darkturquoise;">murder</span></a>
-  <a href="#contact" onclick="openNav()">Sign in</a>
-  <a href="index.html">Home</a>
 </nav>
 <div class="container-form">
 <form>
@@ -38,8 +36,9 @@
 			<textarea id="description" name="description"
 				placeholder="Short description.." maxlength="50"
 				style="height: 100px"></textarea>
-				<label class="container" id="block">Block
-			  <input type="checkbox" >
+				
+				<label class="container" id="blockLabel">Block
+			  <input type="checkbox" id="block">
 			  <span class="checkmark"></span>
 			</label>
 			<p id="message"></p>
