--- a/ProjekatWeb/WebContent/EditUser.html
+++ b/ProjekatWeb/WebContent/EditUser.html
@@ -24,7 +24,7 @@
 			
 			<label for="password">Password</label> <input type="password" id="password"
 				name="password" placeholder="" required="required">
-		<input type="checkbox" onclick="myFunction()"> <label for="checkbox" style="display: inline-block;">Show password</label>
+		<input type="checkbox" onclick="myFunction()"> <label for="checkbox" style="display: inline-block;" id="showPass">Show password</label>
 		<label for="description" >Description</label>
 			<textarea id="description" name="description"
 				placeholder="Short description.." maxlength="50"
